--- a/vgg_16.ipynb
+++ b/vgg_16.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "# Crear el DataFrame con dos columnas -> ruta de la imagen | etiqueta (0:benigno, 1:melanoma) \n",
     "new_data = pd.DataFrame({'x_col': dataset_path + data['isic_id'] + '.jpg',\n",
-    "                        'y_col': data['benign_malignant'].apply(lambda x: 'benign' if x == 'benign' else 'malign')})\n",
+    "                        'y_col': data['benign_malignant'].apply(lambda x: 'benign' if x == 'benign' else 'malign')}) # melanoma\n",
     "\n",
     "print(new_data)"
    ]
